# magicnet-cloud

./: .gitignore  README.md  pyproject.toml
cfgs/: default.yaml
cfgs/birds/: default.yaml  dgcnn.yaml  pointmlp.yaml  pointnet++.yaml  pointnet.yaml  pointnext-s.yaml  pointvector-s.yaml
cfgs/k3d_xyz/: default.yaml  readme.md
cfgs/k3d_xyz/dgcnn/: dgcnn.md  dgcnn.yaml
cfgs/k3d_xyz/pointnet++/: pointnet++.md  pointnet++.yaml
cfgs/k3d_xyz/pointnext/: pointnext-b.yaml  (+3 more)
cfgs/k3d_xyzrgb/: default.yaml  readme.md
cfgs/modelnet40ply2048/: default.yaml  pix4point.yaml
cfgs/s3dis/: default.yaml
cfgs/s3dis_pix4point/: default.yaml
cfgs/scannet/: default.yaml
cfgs/scanobjectnn/: default.yaml
cfgs/scanobjectnn_pix4point/: default.yaml  pix4point.yaml
cfgs/shapenetpart/: default.yaml
cfgs/shapenetpart_pix4point/: default.yaml
examples/: profile.py
examples/classification/: main.py  pretrain.py  train.py
examples/segmentation/: main.py  main_debug.py  test_s3dis_6fold.py  vis_results.py
examples/shapenetpart/: main.py
notebooks/: birds_cls_pointnet.ipynb  google_colab_train_smoke.ipynb
openpoints/cpp/: __init__.py
openpoints/dataset/: __init__.py  build.py  data_util.py
openpoints/loss/: build.py
openpoints/models/: __init__.py
openpoints/transforms/: point_transformer_gpu.py  transforms_factory.py
openpoints/utils/: __init__.py  config.py  dist_utils.py  logger.py  metrics.py  random.py  scatter.py
script/: download_s3dis.sh  infer.sh  install_colab_requirements.sh  main_classification.sh  main_partseg.sh  main_segmentation.sh  test_all_in_one.sh
(+36 files in other folders)
